// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`concurrent user input while AI is streaming response > concurrent input - final state 1`] = `
"> Tell me a slow story
▼
 ╭─────────────────────────────────────────────────────────────────────────────────────────────────╮
 │Chunk 1. Chunk 2. Chunk 3. End.                                                                  │
 ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯
> this is concurrent input
▼
 ╭─────────────────────────────────────────────────────────────────────────────────────────────────╮
 │Acknowledged: this is concurrent input                                                           │
 ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯

╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ >                                                                                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  / for commands                                                    alt + ⏎ for newline ·10 tokens"
`;

exports[`concurrent user input while AI is streaming response > concurrent input - stream finished 1`] = `
"> Tell me a slow story
▼
 ╭─────────────────────────────────────────────────────────────────────────────────────────────────╮
 │Chunk 1. Chunk 2. Chunk 3. End.                                                                  │
 ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯

╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ > this is concurrent input                                                                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  / for commands                                                    alt + ⏎ for newline ·15 tokens"
`;
